feat: docs updated
